--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
-<div class="navigation-wrapper">
+<!--<div class="navigation-wrapper">
 	<nav role="navigation" id="site-nav" class="animated drop" itemscope itemtype="http://schema.org/SiteNavigationElement">
 	    <ul>
 	        {% for link in site.links %}
@@ -14,17 +14,17 @@
 	        {% if site.search %}<li class="dosearch"><i class="icon-search"></i> Search</li>{% endif %}
 	    </ul>
 	</nav>
-</div><!-- /.navigation-wrapper -->
+</div><!-- /.navigation-wrapper --
 
 {% include browser-upgrade.html %}
 
-{% if site.search %}<div class="search-wrapper">
+<!-- {% if site.search %}<div class="search-wrapper">
 	<div class="search-form">
 		<input type="text" class="search-field" placeholder="Search...">
 		<i class="icon-remove-sign icon-2x"></i>
 		<ul class="search-results post-list"></ul><!-- /.search-results -->
 	</div><!-- /.search-form -->
-</div><!-- ./search-wrapper -->{% endif %}
+</div><!-- ./search-wrapper --{% endif %} -->
 
 <!-- {% if page.image.feature %}<header class="masthead" itemscope itemtype="http://schema.org/Organization">
 	<div class="wrap">
